                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Yang Tse (26 Aug 2008)
- Added check and symbol definition for WIN32 file API usage in configure,
  supporting configure's --disable-largefile option for WIN32 targets also.

- Non-configure systems which do not use config-win32.h configuration file,
  and want to use the WIN32 file API, must define USE_WIN32_LARGE_FILES or
  USE_WIN32_SMALL_FILES as appropriate in their own configuration files.

Daniel Stenberg (23 Aug 2008)
- Running 'make ca-firefox' in the root build dir will now run the new
  firefox-db2pem.sh conversion script that converts a local Firefox db of ca
  certs into PEM format, suitable for use with a OpenSSL or GnuTLS built
  libcurl.

- Constantine Sapuntzakis fixed a bug when doing proxy CONNECT with the multi
  interface, and the proxy would send Connection: close during the
  authentication phase.  http://curl.haxx.se/bug/view.cgi?id=2069047

Daniel Fandrich (22 Aug 2008)
- Fixed a problem when --dump-header - was given with more than one URL,
  which caused an error when the second header was dumped due to stdout
  being closed.  Added test case 1066 to verify.  Also fixed a potential
  problem where a closed file descriptor might be used for an upload
  when more than one URL is given.

Yang Tse (22 Aug 2008)
- Improved libcurl's internal curl_m*printf() functions integral data type
  size and signedness handling.

- Internal adjustments to better select/differentiate when large/small file
  support is provided using WIN32 functions directly.

Daniel Fandrich (20 Aug 2008)
- Added an edited version of Vincent Le Normand's documentation of SFTP quote
  commands to the man pages.

Daniel Stenberg (20 Aug 2008)